Fixed globe alignment

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
 #earth {
   position: relative;
+  right: -8%;
   width: 300px;
   height: 300px;
   border-radius: 50%;
